--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title> Naveen's personal site</title>
-        <link rel="stylesheet" href="C:\Users\duppa\OneDrive\Desktop\web development\PROGRAMMING\Mypersonalsite\css\styles.css">
+        <link rel="stylesheet" href="styles.css">
         <link rel="icon" href="favicon.ico">
     </head>
     <body>
@@ -11,7 +11,7 @@
         <table cellspacing="20">
             <tr>
                 <td>
-                    <img src="C:\Users\duppa\OneDrive\Desktop\web development\PROGRAMMING\Mypersonalsite\images\My project_2.png" alt="Naveen's profile picture"> 
+                    <img src="css/My project_2.png" alt="Naveen's profile picture"> 
                 </td>
                 <td>
                     <center>
